# wlplayer

./: README.md
WlPlayer/app/: build.gradle
WlPlayer/app/src/androidTest/java/com/ywl5320/videoplayer/: ExampleInstrumentedTest.java
WlPlayer/app/src/main/: AndroidManifest.xml
WlPlayer/app/src/main/java/com/ywl5320/videoplayer/: MainActivity.java
WlPlayer/app/src/main/res/layout/: activity_main.xml
WlPlayer/app/src/main/res/values/: strings.xml
WlPlayer/app/src/test/java/com/ywl5320/videoplayer/: ExampleUnitTest.java
WlPlayer/libwlplayer/: CMakeLists.txt
WlPlayer/libwlplayer/src/androidTest/java/ywl5320/com/libwlplayer/: ExampleInstrumentedTest.java
WlPlayer/libwlplayer/src/main/: AndroidManifest.xml
WlPlayer/libwlplayer/src/main/assets/: fragment_yuv.glsl  vertex_yuv.glsl
WlPlayer/libwlplayer/src/main/cpp/: AndroidLog.h  WlAudio.cpp  WlAudio.h  WlBasePlayer.h  WlFFmpeg.cpp  WlFFmpeg.h  WlListener.cpp  WlListener.h  WlOpenGLES.cpp  WlOpenGLES.h  WlOpenSLES.cpp  WlOpenSLES.h  WlPlayStatus.cpp  WlPlayStatus.h  WlQueue.cpp  WlQueue.h  WlVideo.cpp  WlVideo.h  wlplayer.cpp
WlPlayer/libwlplayer/src/main/cpp/include/libavutil/: avutil.h
WlPlayer/libwlplayer/src/main/java/com/ywl5320/libwlplayer/: Utils.java  WlPlayer.java  WlVideoView.java
WlPlayer/libwlplayer/src/main/res/values/: strings.xml
WlPlayer/libwlplayer/src/test/java/ywl5320/com/libwlplayer/: ExampleUnitTest.java
wlplayer/: settings.gradle
wlplayer/app/: build.gradle
wlplayer/app/src/androidTest/java/com/ywl5320/player/: ExampleInstrumentedTest.java
wlplayer/app/src/main/: AndroidManifest.xml
wlplayer/app/src/main/java/com/ywl5320/player/: WlApplication.java
wlplayer/app/src/main/java/com/ywl5320/player/activity/: RadioLiveActivity.java  ShowImgActivity.java  VideoListActivity.java  VideoLiveActivity.java  WlMainActivity.java
wlplayer/app/src/main/java/com/ywl5320/player/adapter/: PandaVideoListAdapter.java  RadioAdapter.java  VideoListAdapter.java  ViewPagerAdapter.java  WapHeaderAndFooterAdapter.java
wlplayer/app/src/main/java/com/ywl5320/player/base/: BaseActivity.java  BaseBean.java  BaseDialog.java  BaseFragment.java
wlplayer/app/src/main/java/com/ywl5320/player/bean/: PandaTvDataBean.java  PandaTvListItemBean.java  PandaTvLiveDataBean.java  RadioLiveChannelBean.java  RadioLiveListBean.java  RadioStreamsBean.java  RadioTokenBean.java  VideoListBean.java
wlplayer/app/src/main/java/com/ywl5320/player/dialog/: LoadingDialog.java  NormalAskComplexDialog.java
wlplayer/app/src/main/java/com/ywl5320/player/fragment/: AboutFragment.java  LocalFragment.java  RadioFragment.java  VideoFragment.java
wlplayer/app/src/main/java/com/ywl5320/player/httpservice/beans/: UserBean.java  WeatherBean.java
wlplayer/app/src/main/java/com/ywl5320/player/httpservice/httpentity/: RadioHttpResult.java  VideoHttpResult.java
wlplayer/app/src/main/java/com/ywl5320/player/httpservice/service/: ExceptionApi.java  HttpMethod.java  RadioBaseApi.java  VideoBaseApi.java
wlplayer/app/src/main/java/com/ywl5320/player/httpservice/serviceapi/: RadioApi.java  RadioService.java  VideoApi.java  VideoService.java
wlplayer/app/src/main/java/com/ywl5320/player/httpservice/subscribers/: HttpSubscriber.java  SubscriberOnListener.java
wlplayer/app/src/main/java/com/ywl5320/player/log/: BaseLog.java  FileLog.java  JsonLog.java  MyLog.java
wlplayer/app/src/main/java/com/ywl5320/player/util/: BeanUtil.java  CommonUtil.java  NetUtil.java
wlplayer/app/src/main/java/com/ywl5320/player/widget/: SquareImageView.java  TabLayoutView.java
wlplayer/app/src/main/res/anim/: dialog_enter.xml  dialog_exit.xml
wlplayer/app/src/main/res/drawable/: btn_selector_gray.xml  btn_selector_red.xml  circle_dot_red_bg.xml  item_selected_selector.xml  loading_gray_bg_selector.xml  nav_about_selector.xml  nav_audio_selector.xml  nav_file_selector.xml  nav_video_selector.xml  progress_load_bg.xml  video_loading.xml  white_normal_bg.xml  white_normal_bottom_dialog_bg_left.xml  white_normal_bottom_dialog_bg_right.xml
wlplayer/app/src/main/res/layout/: activity_radio_live_layout.xml  activity_show_img_layout.xml  activity_video_list_layout.xml  activity_wlmain_layout.xml  dialog_normal_ask_complex_layout.xml  footer_layout.xml  fragment_about_layout.xml  fragment_local_layout.xml  fragment_video_layout.xml  include_common_text_title.xml  item_live_channel_layout.xml  item_videlist_layout.xml  item_video_list_adapter_layout.xml  loading_dialog.xml
wlplayer/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
wlplayer/app/src/test/java/com/ywl5320/player/: ExampleUnitTest.java
wlplayer/libwlplayer/: CMakeLists.txt  build.gradle
wlplayer/libwlplayer/src/androidTest/java/com/ywl5320/wlplayer/: ExampleInstrumentedTest.java
wlplayer/libwlplayer/src/main/cpp/: AndroidLog.h  WlAudio.cpp  WlAudio.h  WlAudioChannel.cpp  WlAudioChannel.h  WlBasePlayer.cpp  WlBasePlayer.h  WlFFmpeg.cpp  WlFFmpeg.h  WlJavaCall.cpp  WlJavaCall.h  WlQueue.cpp  WlQueue.h  WlStataus.h  WlVideo.cpp  WlVideo.h  wlplayer.cpp
wlplayer/libwlplayer/src/main/cpp/include/libavcodec/: avcodec.h
wlplayer/libwlplayer/src/main/cpp/include/libavutil/: ffversion.h
wlplayer/libwlplayer/src/main/java/com/ywl5320/listener/: WlOnCompleteListener.java  WlOnCutVideoImgListener.java  WlOnErrorListener.java  WlOnGlSurfaceViewOncreateListener.java  WlOnInfoListener.java  WlOnLoadListener.java  WlOnPreparedListener.java  WlOnRenderRefreshListener.java  WlOnStopListener.java  WlStatus.java
wlplayer/libwlplayer/src/main/java/com/ywl5320/opengles/: WlGlRender.java  WlGlSurfaceView.java  WlShaderUtils.java
wlplayer/libwlplayer/src/main/java/com/ywl5320/util/: MyLog.java  WlTimeUtil.java
wlplayer/libwlplayer/src/main/java/com/ywl5320/wlplayer/: WlPlayer.java  WlTimeBean.java
wlplayer/libwlplayer/src/main/res/raw/: fragment_mediacodec.glsl  fragment_no.glsl  fragment_yuv.glsl  vertex_base.glsl
wlplayer/libwlplayer/src/test/java/com/ywl5320/wlplayer/: ExampleUnitTest.java
